# ak820pro-modder

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.claude/: CLAUDE.md  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  protocol_finding.yml
.github/workflows/: ci.yml
crates/ak820-audio-reactive/: Cargo.toml  build.rs
crates/ak820-audio-reactive/src/: analyzer.rs  capture.rs  lib.rs
crates/ak820-cli/: Cargo.toml  build.rs
crates/ak820-cli/src/: main.rs
crates/ak820-protocol/: Cargo.toml
crates/ak820-protocol/src/: device.rs  error.rs  lib.rs  protocol.rs
crates/ak820-protocol/src/commands/: clock.rs  keymap.rs  lighting.rs  macros.rs  mod.rs  per_key_rgb.rs  sleep.rs  system.rs  tft.rs  tft_image.rs  tft_presets.rs
docs/: ARCHITECTURE.md  HANDOFF.md  INSTALL.md  PROTOCOL.md
docs/reverse-engineering/: CAPTURE_GUIDE.md  README.md  official-export-firmware-1.07.json
docs/reverse-engineering/online-driver/: default-protocol.js
src/: App.tsx  errors.ts  index.css  main.tsx  theme.ts  types.ts  ui.ts  version.ts
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_reactive.rs  automations.rs  icloud_sync.rs  lib.rs  main.rs  now_playing.rs  now_playing_tft.rs  presets.rs  starter_library.rs  tft_memory.rs  tft_text.rs
src/components/: Layout.tsx  NowPlayingCard.tsx  SyncCard.tsx  ui.tsx
src/data/: action-catalog.ts  hid-usage-names.ts  iso-de-layout.ts
src/data/layouts/: ansi.json  ansi.ts  index.ts  iso-de.json  iso-de.ts  iso-es.json  iso-es.ts  iso-fr.json  iso-fr.ts  iso-uk.json  iso-uk.ts  types.ts  use-layout.ts
src/views/: Automations.tsx  Connect.tsx  CustomLightingPaint.tsx  Keymap.tsx  Lighting.tsx  Macros.tsx  Presets.tsx  System.tsx  Tft.tsx
