[package]
name = "ak820pro-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tauri shell for the AK820 Pro control app"

[lib]
name = "ak820pro_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
ak820-protocol = { path = "../crates/ak820-protocol" }
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["sync"] }
