[package]
name = "ak820pro-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tauri shell for the AK820 Pro control app"

[lib]
name = "ak820pro_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
ak820-protocol = { path = "../crates/ak820-protocol" }
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
# Native file-open dialog for the TFT image upload (Phase 5d). Lets the
# frontend get a real filesystem path the backend can `std::fs::read`,
# avoiding the JSON-array-of-bytes IPC overhead of passing the file
# buffer through the webview.
tauri-plugin-dialog = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
# `rt-multi-thread` so the audio-reactive streamer can spawn its loop
# without starving the rest of the runtime. `time` for the frame
# pacing inside that loop. `macros` so we can keep using #[tauri::command]
# attrs that depend on tokio's spawn.
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time", "macros"] }
# Bitmap-font text rendering for the Now-Playing TFT preset (Phase 5e
# part 1). `embedded-graphics` ships a handful of MonoFonts and a
# `DrawTarget` trait we implement on a tiny 128×128 RGB565 framebuffer.
# Pure-Rust, no_std-friendly, ~30 KB compiled.
embedded-graphics = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
# Audio-reactive lighting (Phase 6 part 1b). `capture` pulls in
# ScreenCaptureKit + the Swift static lib; the Swift runtime rpath is
# baked in by `build.rs` below.
ak820-audio-reactive = { path = "../crates/ak820-audio-reactive", features = ["capture"] }
