[package]
name = "ak820-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Headless CLI for the Epomaker / Ajazz AK820 Pro"

[[bin]]
name = "ak820"
path = "src/main.rs"

[dependencies]
ak820-protocol = { path = "../ak820-protocol" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
