[package]
name = "ak820-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Headless CLI for the Epomaker / Ajazz AK820 Pro"

[[bin]]
name = "ak820"
path = "src/main.rs"

[dependencies]
ak820-protocol = { path = "../ak820-protocol" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Audio-reactive smoke probe (`ak820 audio meter`). The `capture` feature
# pulls in ScreenCaptureKit + the Swift static lib. macOS-only — the CLI
# still builds on Linux/Windows, just without the `audio` subcommand.
ak820-audio-reactive = { path = "../ak820-audio-reactive", features = ["capture"] }
